# goofygecko

./: .gitignore  Cargo.toml  Dockerfile  IDEA.md  INSTALL.MD  README.md  config.example.json  config.toml  docker-compose.yml  spec.yaml  sqlx-data.json
assets/: config.json
config/: base.toml  development.toml  production.toml
migrations/: 20220420133957_init.sql  20220426162554_user_register.sql  20220802095558_goofygeckoserial.sql  20220808125601_address_mapping.sql
src/: arweave.rs  config.rs  configuration.rs  identity.rs  lib.rs  main.rs  nft.rs  trader.rs  verusid.rs
src/bot/: events.rs  framework.rs  global_data.rs  mod.rs
src/bot/utils/: config.rs  database.rs  embeds.rs  mod.rs
src/nft/: art.rs  arweave.rs  config.rs  identity.rs  metadata.rs  mod.rs
