[package]
name = "verusnft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }
serde_json = "1.0"
load-dotenv = "0.1.2"

[dependencies.serenity]
version = "0.10"
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
default-features = false

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["postgres", "macros", "migrate", "uuid", "offline", "chrono", "runtime-tokio-rustls"]