[package]
edition = "2021"
name = "verusnft"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "verusnft"
path = "src/main.rs"

[lib]
name = "verusnftlib"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6"
load-dotenv = "0.1.2"
serde_json = "1.0"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "net"]}
tracing = "0.1.26"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[dependencies.serenity]
default-features = false
features = [
  "builder",
  "client",
  "framework",
  "gateway",
  "http",
  "model",
  "standard_framework",
  "utils",
  "rustls_backend",
]
version = "0.10"

[dependencies.sqlx]
default-features = false
features = ["postgres", "macros", "migrate", "uuid", "offline", "chrono", "runtime-tokio-rustls"]
version = "0.5"
