[package]
edition = "2021"
name = "verusnft"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "verusnft"
path = "src/main.rs"

[lib]
name = "verusnftlib"
path = "src/lib.rs"

[dependencies]
arloader = "0.1.63"
color-eyre = "0.6"
derive_more = "0.99.17"
hex = "0.4"
indexmap = {version = "1.8.0", features = ["serde"]}
load-dotenv = "0.1.2"
rand = "0.8"
rand_pcg = "0.3"
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "net"]}
futures = "0.3.21"
tracing = "0.1.26"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
url = "2.2.2"
vrsc = {path = "../rust-vrsc/"}
vrsc-rpc = {path = "../rust-vrsc-rpc/client"}

[dependencies.serenity]
default-features = false
features = [
  "cache",
  "builder",
  "client",
  "framework",
  "gateway",
  "http",
  "model",
  "standard_framework",
  "utils",
  "rustls_backend",
]
version = "0.11"

[dependencies.sqlx]
default-features = false
features = ["postgres", "macros", "migrate", "uuid", "offline", "chrono", "runtime-tokio-rustls"]
version = "0.5"
